force-app/main/default/objects/Historian_Deploy_Result__c/Historian_Deploy_Result__c.object-meta.xml
<CustomObject>
    <label>Historian Deploy Result</label>
    <pluralLabel>Historian Deploy Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Deploy Result #</label>
        <displayFormat>HDR-{000000}</displayFormat>
    </nameField>
</CustomObject>