force-app/main/default/objects/Historian_Deploy_Result__c/fields/Component_FullName__c.field-meta.xml
<CustomField>
    <fullName>Component_FullName__c</fullName>
    <label>Component FullName</label>
    <type>Text</type>
    <length>255</length>
</CustomField>