force-app/main/default/objects/Historian_Deploy_Result__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>