force-app/main/default/objects/Historian_Deploy_Result__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>