force-app/main/default/objects/Historian_Deploy_Result__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>