force-app/main/default/objects/Historian_Deploy_Result__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>40</length>
</CustomField>